--- a/app/src/main/res/layout/item_word.xml
+++ b/app/src/main/res/layout/item_word.xml
@@ -7,11 +7,10 @@
 
         <variable
             name="word"
-            type="com.naldana.dummydictionary.model.Word" />
+            type="com.rivas.dummydictionary.data.model.Word" />
     </data>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/word_card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardUseCompatPadding="true">
@@ -25,7 +24,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{word.word}"
+                android:text="@{word.term}"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                 tools:text="Palabra" />
 
@@ -38,5 +37,54 @@
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                 tools:text="Definición de la palabra" />
         </LinearLayout>
+
+        <!-- TMP
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="8"
+                android:orientation="vertical"
+                android:padding="@dimen/default_gap">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{word.word}"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+                    tools:text="Palabra" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/small_gap"
+                    android:layout_marginTop="@dimen/small_gap"
+                    android:text="@{word.definition}"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
+                    tools:text="Definición de la palabra" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:orientation="vertical"
+                android:padding="@dimen/default_gap">
+
+                <Button
+                    android:id="@+id/delete_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    app:icon="@drawable/ic_baseline_delete_24" />
+            </LinearLayout>
+        </LinearLayout>
+
+        -->
     </androidx.cardview.widget.CardView>
 </layout>
