--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="default_gap">16dp</dimen>
-    <dimen name="small_gap">8dp</dimen>
+    <dimen name="default_gap">8dp</dimen>
+    <dimen name="small_gap">4dp</dimen>
+    <dimen name="big_gap">16dp</dimen>
+    <dimen name="bigger_gap">24dp</dimen>
 </resources>
